--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "prove": "bb prove -s ultra_honk -b ./target/hello_world.json -w ./target/hello_world.gz -o ./target --oracle_hash keccak --zk",
     "vk": "bb write_vk -s ultra_honk -b ./target/hello_world.json -o ./target --oracle_hash keccak",
     "convert": "{ printf \"0x\"; xxd -p -c 256 \"./target/proof\" | tr -d '\\n'; echo; } > \"./target/zkv_proof.hex\" && { printf \"0x\"; xxd -p -c 256 \"./target/vk\" | tr -d '\\n'; echo; } > \"./target/zkv_vk.hex\" && { printf \"0x\"; xxd -p -c 256 \"./target/public_inputs\" | tr -d '\\n'; echo; } > \"./target/zkv_pubs.hex\"",
-    "all": "npm run test && npm run execute && npm run prove && npm run vk && npm run convert",
-    "submit": "node index.js"
+    "gen:prover": "node ./scripts/generate-inputs.js",
+    "all": "npm run test && npm run gen:prover && npm run execute && npm run prove && npm run vk && npm run convert",
+    "submit": "node scripts/submit.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
     "@aztec/bb.js": "^2.0.3",
     "@zk-kit/lean-imt": "^2.2.4",
     "dotenv": "^17.2.2",
+    "js-sha3": "^0.9.3",
     "poseidon-lite": "^0.3.0",
     "zkverifyjs": "^1.0.0"
   }
