add fetch hyperliquid

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
-SEED_PHRASE="<seed phrase>" # string
+HYPERLIQUID_API_URL=https://api.hyperliquid.xyz/info
+USER_ADDRESS=0xYOUR_ADDRESS_HERE
+OUTPUT_DIR=proofs
