--- a/package.json
+++ b/package.json
@@ -1,28 +1,14 @@
 {
-  "name": "proof-submission",
-  "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
-    "test": "nargo test --show-output",
-    "execute": "nargo execute",
-    "prove": "bb prove -s ultra_honk -b ./target/hello_world.json -w ./target/hello_world.gz -o ./target --oracle_hash keccak --zk",
-    "vk": "bb write_vk -s ultra_honk -b ./target/hello_world.json -o ./target --oracle_hash keccak",
-    "convert": "{ printf \"0x\"; xxd -p -c 256 \"./target/proof\" | tr -d '\\n'; echo; } > \"./target/zkv_proof.hex\" && { printf \"0x\"; xxd -p -c 256 \"./target/vk\" | tr -d '\\n'; echo; } > \"./target/zkv_vk.hex\" && { printf \"0x\"; xxd -p -c 256 \"./target/public_inputs\" | tr -d '\\n'; echo; } > \"./target/zkv_pubs.hex\"",
-    "gen:prover": "node ./scripts/generate-inputs.js",
-    "all": "npm run test && npm run gen:prover && npm run execute && npm run prove && npm run vk && npm run convert",
-    "submit": "node scripts/submit.js"
+    "fetch:hyperliquid": "ts-node scripts/fetchHyperliquid.ts"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "type": "module",
   "dependencies": {
-    "@aztec/bb.js": "^2.1.8",
-    "@zk-kit/lean-imt": "^2.2.4",
-    "dotenv": "^17.2.3",
-    "js-sha3": "^0.9.3",
-    "poseidon-lite": "^0.3.0",
-    "zkverifyjs": "^2.1.0"
+    "axios": "^1.13.2",
+    "dotenv": "^17.2.3"
+  },
+  "devDependencies": {
+    "@types/node": "^25.0.10",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
