--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
+  "type": "module",
   "scripts": {
-    "fetch:hyperliquid": "ts-node scripts/fetchHyperliquid.ts"
+    "fetch:hyperliquid": "ts-node scripts/main.ts"
   },
   "dependencies": {
     "axios": "^1.13.2",
