--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,4 @@ PRIMUS_PRIVATE_KEY=0xYOUR_PRIVATE_KEY_HERE
 PRIMUS_USER_ADDRESS=0xYOUR_ADDRESS_HERE
 OUTPUT_DIR=proofs
 RPC_URL=https://sepolia.base.org
-CHAIN_ID=000000
+PRIMUS_CHAIN_ID=000000
